--- a/app/src/main/res/layout/gameoverpopup.xml
+++ b/app/src/main/res/layout/gameoverpopup.xml
@@ -14,6 +14,7 @@
         android:textSize="@dimen/gameover_text_size" />
 
     <TextView
+        android:id="@+id/end_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -38,11 +39,11 @@
         android:textAlignment="center" />
 
     <Button
-        android:id="@+id/exitButton"
+        android:id="@+id/menuButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:text="@string/exit"
+        android:text="@string/menu"
         android:textAlignment="center" />
 
 
